# MomoAgent

./: .gitignore  HF_README_DRAFT.md  README.md  README_ZH.md
Software/APP/: README.md  settings.gradle.kts
Software/Master/: gui.py  ik_solver.py  main.py  mock_llm_targets_demo.json  mock_target_point_service.py  soarmmoce_face_follow.py  (+4 more)
Software/Master/face_loc/: .env.example  .gitignore  1.md  FRAME_PREVIEW_API.md  README.md  actions.schema.json  environment.yml  main.py  pyproject.toml  requirements.txt  skill.manifest.json
Software/Master/face_loc/configs/: default.yaml  rtsp.yaml  usb_camera.yaml  video_file.yaml
Software/Master/face_loc/runtime/: smoke_test.avi
Software/Master/face_loc/scripts/: face_tracking_skill.py  start_service.sh
Software/Master/face_loc/src/face_tracking/: config.py  controller.py  engine.py  logging_utils.py  main.py  openclaw_skill_cli.py  result_store.py  schemas.py  selection.py  service.py  smoothing.py  target_center.py  video_source.py  visualizer.py
Software/Master/face_loc/src/face_tracking/detectors/: __init__.py  base.py  factory.py  insightface_backend.py  yunet_backend.py
Software/Master/face_loc/tests/: test_controller.py  test_main.py  test_schemas.py  test_selector.py  test_smoothing.py  test_video_source.py
Software/Master/face_loc/weights/: README.md
docs/: 0基础机械臂快速入门.md
momoagent2/: README.md
requirements/: advanced.txt  base.txt
scripts/: bootstrap.sh
sdk/: README.md
soarmmoce-real-con/: SKILL.md
step/: ee_2jaw_linear_assembly_soarm_moce.STEP  manual_joint_wrench_soarm_moce.STEP
(+221 files in other folders)
